style.css
:root {
  --blue: #0065FC;
  --light-blue: #DEEBFF;
  --gray: #F2F2F2;
  --white: #FFFFFF;
  --black: #000000;
}

body {
  margin: 0;
  font-family: Raleway;
}

#logo {
  margin-left: 20px;
}

.subtitle {
  display: flex;
  font-size: 14px;
  top: 90px;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 11px;
  padding-bottom: 15px;
  margin-left: 20px;
}

.rectangle {
  border-radius: 20px;
  background-color: var(--gray);
  padding: 30px 25px;
  margin: 20px 15px;
}

.title {
  font-size: 18px;
  font-weight: bold;
  margin-left: 20px;
}

.rectangle > .title {
  margin-left: 20px;
}

.flex {
  display: flex;
}

.master {
  padding: 15px;
}

#footer {
  display: flex;
  height: 150px;
  width: 100%;
  font-size: 12px;
  background-color: var(--gray);
  justify-content: space-evenly;
  flex-wrap: wrap;
  padding-top: 20px;
}

.menu {
  display: flex;
  font-size: 14px;
}

.header {
  display: flex;
  justify-content: space-between;
  padding: 0 20px;
}

.filtres {
  display: flex;
  font-weight: bold;
}

.minibox {
  display: flex;
  justify-content: center;
  width: 150px;
  align-items: center;
  margin-top: 22px;
  height: 35px;
  border-color: var(--gray);
  border-style: solid;
  border-radius: 40px;
  cursor: pointer;

}
.box {
  all: unset;
  height: 80px;
  padding: 0 25px;
  display: flex;
  align-items: center;
  position: relative;
  cursor: pointer;
}

.box:hover {
  color: var(--blue);
}

.minibox:hover {
  color: var(--blue);
}
.box:focus {
  border-top: 2px solid var(--blue);
}

.miniRectangle {
  height: 150px;
  width: 200px;
  background: var(--white);
  border-radius: 20px;
  margin: 20px;
}

.parent {
  display: flex;
  flex-wrap: wrap;
}
.barreDeRecherche {
  display: flex;
  margin-left: 20px;
}
.searchBar {
  all: unset;
  height: 42px;
  width: 180px;
  border-radius: 0;
  border-color: var(--gray);
  border-style: solid;
  padding-left: 20px;
}
.imgSearchBar {
  height: 48px;
  width: 45px;
  border-radius: 15px 0px 0px 15px;
  background: var(--gray);
}
.Rechercher {
  height: 47px;
  width: 100px;
  margin-right: 70px;
  background: var(--blue);
  border-style: none;
  color: var(--white);
  cursor: pointer;
  border-radius: 0px 15px 15px 0px;
  font-weight: bold;
}

::placeholder {
  color: var(--black);
  font-weight: bold;
  font-size: 15px;
}

